# ASKITE

./: .gitignore  LICENSE.md  README.md  blieb.ipynb  breaking_changes.md  citation.cff  clean_ipynb.py  filename.html  pyproject.toml  pyvenv.cfg  requirements.txt
.github/workflows/: testing.yml
data/: README.md  config.yaml
data/2plate_kite/: aero_geometry.yaml  config.yaml  struc_geometry_level_2.yaml
data/2plate_kite/polars/: 1.csv
data/3plate_kite/: aero_geometry_converged.yaml  struc_geometry.yaml  struc_geometry_converged.yaml
data/TUDELFT_V3_KITE/: aero_geometry.yaml  config.yaml  config_level_1.yaml  config_level_2.yaml  config_level_2_new.yaml  struc_geometry.yaml  struc_geometry_all_in_surfplan.yaml  struc_geometry_level_1.yaml  struc_geometry_level_1_converged.yaml  struc_geometry_level_1_julia_format_7_04_26.yaml  struc_geometry_level_1_manual.yaml  struc_geometry_level_1_manual_JULIA.yaml  struc_geometry_level_2_manual.yaml  struc_geometry_level_2_manual_NOT_WORKING.yaml
data/TUDELFT_V3_KITE/organizing_yaml_files_15_05_2026/: FEM_full_to_PSM_reduced_bridles.md  README.md  adjust_wing_element_lenghts_to_nodal_position.py  check_full_kite_masses.py  compare_aero_structural_area.py  map_psm_wing_nodes_to_fem_wing_nodes.py  measure_fem_bridle_attachment_chord_lengths.py  measurements_to_FEM_full_bridles.md  plot_aero_geometry_and_wing_elements.py  stretching_lines.py  struc_geometry_FEM_full.yaml  struc_geometry_PSM_reduced.yaml  struc_geometry_PSM_reduced_photogrammetry_adjusted.yaml
data/TUDELFT_V3_KITE/polars_CFD/: 10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
data/V3_25/: analyze_nodes_ThesisJAWPOLAND.py  config_kite.yaml  config_kite_V3A.yaml  config_kite_copy_may2025.yaml  config_kite_old.yaml  nodes_ThesisJAWPOLAND.csv  rib_list_from_CAD_LE_TE_and_surfplan_d_tube_camber_10ribs.csv  wing_geometry_CAD.csv
data/input/V3_25/: config_kite_V3_25.yaml  path.yaml
data/input/V9_60C/: path.yaml  some_text.txt
data/output/V3_25/: points_up_0.npy  points_up_0_symmetric.npy  points_up_100.npy  points_up_100_perfectcrosswind.npy  points_up_100_symmetric.npy  points_up_100_turning.npy  points_up_100_turning_us_10.npy  points_up_50.npy  points_up_50_perfectcrosswind.npy  points_up_70_crosswind_symmetric.npy  points_up_70_perfectcrosswind.npy  points_up_70_straight_symmetric.npy  points_up_70_symmetric.npy  points_up_70_turning.npy  points_up_78_symmetric.npy  (+9 more)
doc/: another-feature.md  conf.py
doc/_build/: .buildinfo  another-feature.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  some-feature.html
docs/: coconut.md
docs/data/: data.md
docs/src/: run_simulation.md
examples/: PSM&FEM_AeroLoads.py  PSM_FEM_AeroLoads.py  aerostructural_main_pss_vsm.py  clean_ipynb.py  compare_raw_struc_geometry_yaml_level_1_and_2.py  load_simulation.py  main_outdated.ipynb  plot_aoa_vs_coefficients.py  plot_raw_struc_geometry_yaml.py  plot_sweep_scatter.py  plot_sweep_wind_steering.py  profile_qsm_simulation.py  run_aerostructural_simulation.py  run_simulation.py  run_simulation_level_1.py  run_simulation_level_2.py  run_simulation_level_qsm.py  run_sweep_course_steering_depower.py  run_sweep_wind_steering.py  testing_psm.py
examples/PSS/: main_PSS_test_input.py
examples/VSM/: main_aerodynamic_new.py
examples/demonstrating_functionality/: calculate_CG_and_inertia.py  rotate_geometry.py
examples/old/: aerostructural_main_pss.py  plotting_a_run.py  testing.ipynb  testing_dict_to_attrs.py
notebooks/: aerostructural_main.py  filename.html  main_aerostructural.py  testing_dict_to_attrs.py
processed_data/V3_25/: config_kite_V3_25.yaml
scripts/: aerodynamic.ipynb  attempt_at_python_again_aerodynamic.py  clean_ipynb.py  creating_plots.ipynb  main.ipynb  main_aerodynamic.py  main_aerostructural.py  main_outdated.ipynb  notebook_for_testing.ipynb  plotting_a_run.py  testing_importing.py  utils.py
settings/: config.yaml
src/aerodynamic/: VSM.py  bridle_line_system_aero.py  chordwise_distribution_from_2DCFD.py
src/coupling/: coupling_aero2struc.py  coupling_struc2aero.py
src/initialisation/: actuation_relations.py  input_classes.py  input_particleSystem.py  mutable_variables.py  particles_with_rotational_resistance.py  path_functions.py  yaml_loader.py
src/kitesim/: aero2struc.py  aero2struc_level_1.py  aero2struc_level_2.py  aero2struc_level_2_new.py  aerodynamic.py  aerodynamic_bridle_line_drag.py  aerodynamic_vsm.py  aerostructural_coupled_solver.py  aerostructural_coupled_solver_level_1.py  aerostructural_coupled_solver_level_2.py  aerostructural_coupled_solver_level_2_new.py  aerostructural_coupled_solver_qsm.py  initialisation.py  parent_adapter.py  plotting.py  read_struc_geometry_level_2_yaml.py  read_struc_geometry_yaml.py  read_struc_geometry_yaml_level_1.py  read_struc_geometry_yaml_level_2.py  read_struc_geometry_yaml_level_2_new.py  solver.py  struc2aero.py  structural.py  structural_kite_fem.py  structural_kite_fem_level_1.py  structural_kite_fem_level_2.py  structural_kite_fem_level_2_new.py  structural_pss.py  structural_pyfe3d.py  tracking.py  utils.py
src/particleSystem/: ImplicitForce.py  ParticleSystem.py  SpringDamper.py  SystemObject.py
src/post_processing/: functions_plot.py  functions_print.py  post_processing_main.py
src/solver/: euler_attempts.py  solver_main.py  solver_utils.py
src/structural/: structural_mesher.py
tests/: test_aerodynamic_bridle_line_drag.py  test_coupling.py  test_find_symmetrical_pairs.py  testing_numerical_solver.py
(+661 files in other folders)
